fix: header z-index to be top

--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -4,7 +4,7 @@
 header {
   position: sticky;
   top: 0;
-  z-index: 1;
+  z-index: 99;
 
   @include breakpoint.lg {
     width: 354px;
